semantic analyser - states working